fixed login and sign up - Constraints are broken on SignUp Functions
:) more progress

Merge remote-tracking branch 'origin/master'

# Conflicts:
#	.idea/.gitignore
#	.idea/misc.xml
#	.idea/vcs.xml
#	CourseWork.iml
#	target/classes/Controllers/Event.class
#	target/classes/Controllers/Genre.class
#	target/classes/Controllers/Post.class
#	target/classes/Controllers/SocialLink.class
#	target/classes/Controllers/User.class

--- a/resources/client/css/Profile.css
+++ b/resources/client/css/Profile.css
@@ -1,4 +1,5 @@
 .grid-container {
+    height: 65vh;
     display: grid;
     grid-template-columns: 0.6fr 1fr 1.9fr;
     grid-template-rows: 0.2fr 1.6fr;
@@ -40,9 +41,12 @@
     font-size: 30px;
     text-align: left;}
 
-.Posts { grid-area: Posts;
+.Posts {
+    grid-area: Posts;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
+    overflow-y: scroll;
     padding: 20px;
     font-size: 30px;
-    text-align: left;}
+    text-align: center;
+}
